--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <div>
       <h2>Основы языка и синтаксиса JavaScript</h2>
-      <a href="/1.1-variables/">Базовый синтаксис JavaScript</a>
-      <a href="/1.1-variables/">Продвинутый синтаксис JavaScript</a>
-      <a href="/1.1-variables/">Функции, объекты в JavaScript</a>
+      <a href="/bjs-homeworks/1.1-variables/">Базовый синтаксис JavaScript</a>
+      <a href="/bjs-homeworks/1.1-variables/">Продвинутый синтаксис JavaScript</a>
+      <a href="/bjs-homeworks/1.1-variables/">Функции, объекты в JavaScript</a>
     </div>
   </body>
 </html>
