--- a/index.html
+++ b/index.html
@@ -11,19 +11,24 @@
         justify-content: center;
       }
 
-      div {
+      div.first {
         display: flex;
         flex-direction: column;
+        border: 2px solid green;
+        box-sizing: border-box;
+        width: 40vw;
+        padding-left: 1vw;
+        padding-bottom: 1vw;
       }
     </style>
 
     <h1>Навигация по домашним заданиям блока JavaScript</h1>
 
-    <div>
+    <div class="first">
       <h2>Основы языка и синтаксиса JavaScript</h2>
       <a href="/bjs-homeworks/1.1-variables/">Базовый синтаксис JavaScript</a>
-      <a href="/bjs-homeworks/1.1-variables/">Продвинутый синтаксис JavaScript</a>
-      <a href="/bjs-homeworks/1.1-variables/">Функции, объекты в JavaScript</a>
+      <a href="/bjs-homeworks/1.2-extended-syntax/">Продвинутый синтаксис JavaScript</a>
+      <a href="/bjs-homeworks/">Функции, объекты в JavaScript</a>
     </div>
   </body>
 </html>
