change title for understand

--- a/1.2-extended-syntax/index.html
+++ b/1.2-extended-syntax/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Расширенный синтаксис</title>
   </head>
   <body>
     <script type="text/javascript" src="task.js"></script>
