--- a/1.2-extended-syntax/index.html
+++ b/1.2-extended-syntax/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Расширенный синтаксис</title>
-  </head>
-  <body>
-    <script type="text/javascript" src="task.js"></script>
-  </body>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Расширенный синтаксис JavaScript</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <input type="number" placeholder="a" id="a"><br><br>
+    <input type="number" placeholder="b" id="b"><br><br>
+    <input type="number" placeholder="c" id="c"><br>
+    <span id="equation">text</span><br>
+    <button onClick="calculateQuadraticEquation()">Calculate</button>
+    <span id="result">text</span>
+    <br><br><br><br>
+    <input type="text" placeholder="marks" id="marks"><br><br>
+    <button onClick="calculateAverageRating()">Calculate Average Rating</button>
+    <span id="averageMark"></span>
+    <br><br><br><br>
+    <input type="text" placeholder="Name" id="personName"><br><br>
+    <input type="date" id="dateOfBirthday" value="2000-01-01"><br><br>
+    <button onClick="calculateDrinkTask()">Ask drink</button>
+    <span id="drink">text</span>
+    <script src="system.js"></script>
+    <script src="task.js"></script>
+</body>
+
 </html>
