--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2>Основы языка и синтаксиса JavaScript</h2>
       <a href="/bjs-homeworks/1.1-variables/">Базовый синтаксис JavaScript</a>
       <a href="/bjs-homeworks/1.2-extended-syntax/">Продвинутый синтаксис JavaScript</a>
-      <a href="/bjs-homeworks/">Функции, объекты в JavaScript</a>
+      <a href="/bjs-homeworks/1.3-functions">Функции, объекты в JavaScript</a>
     </div>
   </body>
 </html>
