--- a/1.3-functions/index.html
+++ b/1.3-functions/index.html
@@ -1,11 +1,19 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Функции и объекты JavaScript</title>
+    <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>Функции и объекты JavaScript</title>
 </head>
 <body>
-<script src="main.js"></script>
+  <style media="screen"> .one_container { display: flex; flex-direction: column; width: 20%; } .one_container input { margin-bottom: 5%; text-align: center; } .one_container span#expression { margin-bottom: 5%; } .one_container span#result { margin-top: 5%; } </style>
+
+  <div class="one_container">
+    <input type="number" placeholder="a" id="a">
+    <input type="number" placeholder="b" id="b">
+    <input type="number" placeholder="c" id="c">
+    <span id="expression"></span>
+    <button onClick="calculate()">Посчтитать!</button>
+    <span id="result"></span>
+  </div>
+
+  <script src="main.js"></script>
 </body>
 </html>
