--- a/1.3-functions/index.html
+++ b/1.3-functions/index.html
@@ -4,28 +4,7 @@
 </head>
 <body>
   <style media="screen">
-    #one_container, #two_container {
-      display: flex;
-      flex-direction: column;
-      width: 20%;
-    }
-
-    #two_container {
-      margin-top: 3%;
-    }
-
-    #one_container input,  #two_container input{
-      margin-bottom: 5%;
-      text-align: center;
-    }
-
-    #one_container span#expression {
-      margin-bottom: 5%;
-    }
-
-    #one_container span#result {
-      margin-top: 5%;
-    }
+    #one_container, #two_container { display: flex; flex-direction: column; width: 20%; } #two_container { margin-top: 3%; width: 50%; } #two_container button { width: 45%; } #two_container .two_line { display: flex; } #two_container .two_line span { margin-left: 3%; } #one_container input,  #two_container input{ margin-bottom: 5%; text-align: center; } #one_container span#expression { margin-bottom: 5%; } #one_container span#result { margin-top: 5%; }
   </style>
 
   <div id="one_container">
@@ -42,16 +21,16 @@
   </div>
 
   <div id="two_container">
-    <input type="number" value="12322" placeholder="Алгебра" id="algebra">        <span id="result_algebra"></span>
-    <input type="number" value="33435" placeholder="Геометрия" id="geometry">     <span id="result_geometry"></span>
-    <input type="number" value="23343" placeholder="Русский" id="russian">        <span id="result_russian"></span>
-    <input type="number" value="45433" placeholder="Физика" id="physics">         <span id="result_physics"></span>
-    <input type="number" value="35232" placeholder="Музыка" id="music">           <span id="result_music"></span>
-    <input type="number" value="34342" placeholder="Английский" id="english">     <span id="result_english"></span>
-    <input type="number" value="54435" placeholder="Химия" id="chemistry">        <span id="result_chemistry"></span>
-    <input type="number" value="23535" placeholder="Немецкий" id="german">        <span id="result_german"></span>
-    <input type="number" value="45352" placeholder="Литература" id="literature">  <span id="result_literature"></span>
-    <input type="number" value="34532" placeholder="Информатика" id="informatics"><span id="result_informatics"></span>
+    <span class="two_line"><input type="number" value="" placeholder="Алгебра" id="algebra">        <span id="result_algebra"></span></span>
+    <span class="two_line"><input type="number" value="" placeholder="Геометрия" id="geometry">     <span id="result_geometry"></span></span>
+    <span class="two_line"><input type="number" value="" placeholder="Русский" id="russian">        <span id="result_russian"></span></span>
+    <span class="two_line"><input type="number" value="" placeholder="Физика" id="physics">         <span id="result_physics"></span></span>
+    <span class="two_line"><input type="number" value="" placeholder="Музыка" id="music">           <span id="result_music"></span></span>
+    <span class="two_line"><input type="number" value="" placeholder="Английский" id="english">     <span id="result_english"></span></span>
+    <span class="two_line"><input type="number" value="" placeholder="Химия" id="chemistry">        <span id="result_chemistry"></span></span>
+    <span class="two_line"><input type="number" value="" placeholder="Немецкий" id="german">        <span id="result_german"></span></span>
+    <span class="two_line"><input type="number" value="" placeholder="Литература" id="literature">  <span id="result_literature"></span></span>
+    <span class="two_line"><input type="number" value="" placeholder="Информатика" id="informatics"><span id="result_informatics"></span></span>
     <button onClick="calculateAverageRating()">Посчтитать!</button>
     <span id="result_all"></span>
   </div>
