--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="two">
         <h2>Объекты и ООП в Javascript</h2>
         <a href="/bjs-homeworks/2.1-wrappers-for-primitives/nav.html">Обертки для примитивов</a>
-        <a href="/bjs-homeworks/#">Прототип и конструктор объекта</a>
+        <a href="/bjs-homeworks/2.2-object-prototype/nav.html">Прототип и конструктор объекта</a>
         <a href="/bjs-homeworks/#">ООП в JS (ES6)</a>
       </div>
     </div>
