--- a/2.2-object-prototype/nav.html
+++ b/2.2-object-prototype/nav.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>nav 2.2</title>
+  </head>
+  <body>
+    <a href="./task.html">Задачи</a>
+    <a href="./test-runner.html">Тесты</a>
+  </body>
+</html>
