--- a/2.2-object-prototype/nav.html
+++ b/2.2-object-prototype/nav.html
@@ -5,7 +5,7 @@
     <title>nav 2.2</title>
   </head>
   <body>
-    <a href="./task.html">Задачи</a>
+    <a href="./index.html">Задачи</a>
     <a href="./test-runner.html">Тесты</a>
   </body>
 </html>
