edit main nav page

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
       <div class="tree">
         <h2>Продвинутые функции JS</h2>
-        <a href="#">Прототип массива, функции высшего порядка</a>
-        <a href="#">Асинхронность</a>
+        <a href="/bjs-homeworks/3.1-array-proto-hocs/index.html">Прототип массива, функции высшего порядка</a>
+        <a href="/bjs-homeworks/3.2-async/index.html">Асинхронность</a>
       </div>
     </div>
     <div class="diplom">
       <h2>Дипломный проект</h2>
-      <a href="/bjs-homeworks/#">Дипломный проект</a>
+      <a href="/bjs-homeworks/diplom/index.html">Дипломный проект</a>
     </div>
   </body>
 </html>
