ready hard difficult 1

--- a/Basic JS WEB/js-features/countdown/task.html
+++ b/Basic JS WEB/js-features/countdown/task.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="status">
-        До окончания конкурса осталось секунд: <span id="timer">59</span>
+        До окончания конкурса осталось <span id="timerHours_Zero" style="display:none">0</span><span id="timerHours">01</span>:<span id="timerMinutes_Zero" style="display:none">0</span><span id="timerMinutes">11</span>:<span id="timerSeconds_Zero" style="display:none">0</span><span id="timerSeconds">59</span>
     </div>
     <script src="task.js" defer></script>
 </body>
