--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
     <div class="nav">
       <div class="first">
         <h2>Основы языка и синтаксиса JavaScript</h2>
-        <a href="/bjs-homeworks/1.1-variables/">Базовый синтаксис JavaScript</a>
-        <a href="/bjs-homeworks/1.2-extended-syntax/">Продвинутый синтаксис JavaScript</a>
-        <a href="/bjs-homeworks/1.3-functions">Функции, объекты в JavaScript</a>
+        <a href="/bjs-homeworks/Basic_JS/1.1-variables/">Базовый синтаксис JavaScript</a>
+        <a href="/bjs-homeworks/Basic_JS/1.2-extended-syntax/">Продвинутый синтаксис JavaScript</a>
+        <a href="/bjs-homeworks/Basic_JS/1.3-functions">Функции, объекты в JavaScript</a>
       </div>
 
       <div class="two">
         <h2>Объекты и ООП в Javascript</h2>
-        <a href="/bjs-homeworks/2.1-wrappers-for-primitives/nav.html">Обертки для примитивов</a>
-        <a href="/bjs-homeworks/2.2-object-prototype/nav.html">Прототип и конструктор объекта</a>
-        <a href="/bjs-homeworks/2.3-oop-es6/nav.html">ООП в JS (ES6)</a>
+        <a href="/bjs-homeworks/Basic_JS/2.1-wrappers-for-primitives/nav.html">Обертки для примитивов</a>
+        <a href="/bjs-homeworks/Basic_JS/2.2-object-prototype/nav.html">Прототип и конструктор объекта</a>
+        <a href="/bjs-homeworks/Basic_JS/2.3-oop-es6/nav.html">ООП в JS (ES6)</a>
       </div>
 
       <div class="tree">
         <h2>Продвинутые функции JS</h2>
-        <a href="/bjs-homeworks/3.1-array-proto-hocs/index.html">Прототип массива, функции высшего порядка</a>
-        <a href="/bjs-homeworks/3.2-async/index.html">Асинхронность</a>
+        <a href="/bjs-homeworks/Basic_JS/3.1-array-proto-hocs/index.html">Прототип массива, функции высшего порядка</a>
+        <a href="/bjs-homeworks/Basic_JS/3.2-async/index.html">Асинхронность</a>
       </div>
     </div>
     <div class="diplom">
       <h2>Дипломный проект</h2>
-      <a href="/bjs-homeworks/diplom/index.html">Дипломный проект</a>
+      <a href="https://github.com/NimbleFIsh/bjs-homeworks/tree/master/Basic_JS/diplom">Дипломный проект</a>
     </div>
   </body>
 </html>
