--- a/Basic_JS_WEB/element-search/slider/task.html
+++ b/Basic_JS_WEB/element-search/slider/task.html
@@ -32,13 +32,13 @@
                 <div class="slider__arrow slider__arrow_next">&gt;</div>
             </div>
             <!-- Повышенная сложность. Раскомменируйте код -->
-            <!--<div class="slider__dots">
-                <div class="slider__dot"></div>
-                <div class="slider__dot"></div>
-                <div class="slider__dot"></div>
-                <div class="slider__dot"></div>
-                <div class="slider__dot"></div>
-            </div>-->
+            <div class="slider__dots">
+                <div class="slider__dot slider__dot_active" value="0"></div>
+                <div class="slider__dot" value="1"></div>
+                <div class="slider__dot" value="2"></div>
+                <div class="slider__dot" value="3"></div>
+                <div class="slider__dot" value="4"></div>
+            </div>
         </div>
     </div>
     <script src="task.js"></script>
