--- a/index.html
+++ b/index.html
@@ -112,5 +112,13 @@
         <a href="">Дипломный проект</a>
       </div>
     </div>
+
+    <!-- <div class="Advanced_JS">
+      <h2>Продвинутый JavaScript: современные возможности языка</h2>
+    </div> -->
+
+    <!-- <div class="Advanced_JS_WEB">
+      <h2>Продвинутый JavaScript в браузере</h2>
+    </div> -->
   </body>
 </html>
