--- a/Basic_JS_WEB/client-state/text-editor/task.html
+++ b/Basic_JS_WEB/client-state/text-editor/task.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <textarea id="editor" cols="30" rows="10"></textarea>
+    <button id="clearEditor" type="button" name="button">Удалить текст</button>
     <script src="task.js"></script>
 </body>
 </html>
