--- a/Basic_JS_WEB/client-state/auth/task.html
+++ b/Basic_JS_WEB/client-state/auth/task.html
@@ -24,7 +24,7 @@
         </form>
     </div>
     <div class="welcome" id="welcome">
-        Добро пожаловать, пользователь #<span id="user_id"></span>
+        Добро пожаловать, пользователь #<span id="user_id"></span><button id="unlogin">Деавторизация</button>
     </div>
     <script src="task.js"></script>
 </body>
